# openenv-hackathon

./: .gitignore  Dockerfile  LICENSE  README.md  __init__.py  agent.py  client.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py  test_env.py
app/: __init__.py  agent.py  env.py  main.py  models.py  tasks.py
server/: __init__.py  app.py
static/: index.html
tasks/: __init__.py  book_appointment.py  priority_scheduling.py  scheduling_conflicts.py
